--- a/app/src/main/res/layout-land/fragment_top.xml
+++ b/app/src/main/res/layout-land/fragment_top.xml
@@ -399,7 +399,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="@string/clear"/>
+                    android:text="@string/del"/>
 
                 <Button
                     style="@style/middleNumbers"
