--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:id="@+id/topFragment"
         class="tudor.com.supercalc.TopFragment"
         android:layout_weight="3"
         tools:layout="@layout/fragment_top"
