--- a/app/src/iOSTheme/res/layout/activity_main.xml
+++ b/app/src/iOSTheme/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+    android:background="@drawable/backimg">
     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -12,15 +12,13 @@
         class="tudor.com.supercalc.TopFragment"
         android:layout_weight="3"
         tools:layout="@layout/fragment_top"
-        android:layout_gravity="top"/>
+        />
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/pager"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_weight="5"
-        android:layout_gravity="center_vertical"
-        >
+        android:layout_weight="5">
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
