--- a/app/src/iOSTheme/res/values-v21/styles.xml
+++ b/app/src/iOSTheme/res/values-v21/styles.xml
@@ -20,17 +20,19 @@
     <style name="topTheme" parent="android:Widget.Material.Button.Borderless">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#353535</item>
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:textSize">@dimen/fontSize</item>
         <item name="android:selectable">false</item>
         <item name="android:editable">false</item>
-        <item name="android:background">@drawable/roundbutton</item>
     </style>
 
     <style name="downTheme" parent="android:Widget.Material.Button.Borderless">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#353535</item>
-        <!--<item name="android:background">@android:color/transparent</item>-->
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:textSize">@dimen/fontSize</item>
+        <item name="android:selectable">false</item>
+        <item name="android:editable">false</item>
     </style>
 
 
